# BROZ

./: .gitignore  RAPPORT_CLIENT_24FEV.md  vMVP. Brozr - Cahier des Charges.xlsx
WEB_RTC/: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml  index.html
WEB_RTC/coturn/: turnserver.conf
WEB_RTC/deploy/: deploy.sh  liverelay.service
WEB_RTC/src/: analytics.rs  api.rs  auth.rs  config.rs  error.rs  events.rs  main.rs  recording.rs  room.rs  sfu.rs  sse.rs  turn_server.rs  webhook.rs
WEB_RTC/static/: dashboard.html  docs.html  landing.html  liverelay.js
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/broz-analytics/: Cargo.toml
backend/broz-analytics/migrations/00000000000001_create_analytics/: down.sql  up.sql
backend/broz-analytics/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-analytics/src/events/: subscriber.rs
backend/broz-analytics/src/routes/: health.rs  stats.rs
backend/broz-analytics/src/services/: aggregation.rs
backend/broz-auth/: Cargo.toml
backend/broz-auth/migrations/2024-01-01-000001_create_auth_tables/: down.sql  up.sql
backend/broz-auth/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-auth/src/events/: publisher.rs  subscriber.rs
backend/broz-auth/src/routes/: forgot_password.rs  health.rs  login.rs  logout.rs  me.rs  mod.rs  oauth.rs  refresh.rs  register.rs  resend_code.rs  reset_password.rs  verify_email.rs
backend/broz-auth/src/services/: auth_service.rs  token_service.rs
backend/broz-gateway/: Cargo.toml
backend/broz-gateway/src/: config.rs  lib.rs  main.rs
backend/broz-gateway/src/routes/: auth.rs  health.rs  mod.rs  proxy.rs  rate_limit.rs
backend/broz-infra/: INFRASTRUCTURE.md
backend/broz-infra/docker/: Dockerfile
backend/broz-infra/k8s/broz-app/: broz-analytics.yaml  broz-auth.yaml  broz-gateway.yaml  broz-matching.yaml  broz-messaging.yaml  broz-moderation.yaml  broz-notification.yaml  broz-user.yaml  service-template.yaml
backend/broz-infra/k8s/broz-data/: minio.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  secrets.yaml
backend/broz-infra/k8s/broz-frontend/: frontend.yaml
backend/broz-infra/k8s/broz-monitoring/: prometheus.yaml
backend/broz-infra/k8s/broz-system/: hetzner-storage.yaml  namespaces.yaml  traefik-ingress.yaml  traefik-values.yaml
backend/broz-infra/scripts/: backup-postgres.sh  create-databases.sh  deploy.sh  setup-app-node.sh  setup-sfu-node.sh
backend/broz-matching/: Cargo.toml
backend/broz-matching/migrations/2024-01-01-000001_create_matching_tables/: down.sql  up.sql
backend/broz-matching/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-matching/src/events/: publisher.rs
backend/broz-matching/src/matching/: algorithm.rs  history.rs  mod.rs  queue.rs
backend/broz-matching/src/routes/: health.rs  livecam.rs  mod.rs
backend/broz-matching/src/socket/: handlers.rs
backend/broz-messaging/: Cargo.toml
backend/broz-messaging/migrations/2024-01-01-000001_create_messaging_tables/: up.sql
backend/broz-messaging/migrations/2024-01-02-000001_add_is_private_to_messages/: down.sql  up.sql
backend/broz-messaging/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-messaging/src/events/: publisher.rs  subscriber.rs
backend/broz-messaging/src/routes/: conversations.rs  health.rs  messages.rs  mod.rs
backend/broz-messaging/src/socket/: handlers.rs
backend/broz-moderation/: Cargo.toml
backend/broz-moderation/migrations/2024-01-01-000001_create_moderation_tables/: down.sql  up.sql
backend/broz-moderation/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-moderation/src/events/: publisher.rs
backend/broz-moderation/src/routes/: admin_routes.rs  health.rs  mod.rs  user_routes.rs
backend/broz-notification/: Cargo.toml
backend/broz-notification/migrations/2024-01-01-000001_create_notification_tables/: up.sql
backend/broz-notification/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-notification/src/events/: subscriber.rs
backend/broz-notification/src/routes/: health.rs  notifications.rs
backend/broz-notification/src/services/: notification_service.rs
backend/broz-shared/: Cargo.toml
backend/broz-shared/src/: errors.rs  lib.rs
backend/broz-shared/src/clients/: db.rs  email.rs  minio.rs  mod.rs  rabbitmq.rs  redis.rs
backend/broz-shared/src/middleware/: auth_extractor.rs  metrics_layer.rs  mod.rs  tracing_layer.rs
backend/broz-shared/src/types/: api.rs  auth.rs  event.rs  mod.rs  pagination.rs
backend/broz-user/: Cargo.toml
backend/broz-user/migrations/2024-01-01-000001_create_user_tables/: down.sql  up.sql
backend/broz-user/src/: config.rs  main.rs  models.rs  schema.rs
backend/broz-user/src/events/: publisher.rs  subscriber.rs
backend/broz-user/src/routes/: follows.rs  health.rs  internal.rs  likes.rs  mod.rs  photo.rs  profile.rs  search.rs
backend/broz-user/src/services/: profile_service.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  i18n.js  index.css
frontend/src/components/: AccountSettings.js  BottomNav.js  FiltersOverlay.js  GlobalLiveCamListener.js  Hero.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: AdminDashboard.js  AuthCallback.js  Juices.js  Live.js  LivePrematch.js  Login.js  Onboarding.js  PlayShow.js  Profile.js  SafetyScreen.js  Signup.js  Space.js  VideoCall.js
frontend/src/utils/: auth.js  kinks.js  socket.js
