[workspace]
resolver = "2"
members = [
    "broz-shared",
    "broz-auth",
    "broz-user",
    "broz-gateway",
    "broz-matching",
    "broz-messaging",
    "broz-notification",
    "broz-moderation",
    "broz-analytics",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# IDs and time
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Infrastructure
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
lapin = "2"

# Configuration
config = "0.14"

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Crypto
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Shared library
broz-shared = { path = "broz-shared" }
