[package]
name = "broz-auth"
version = "0.1.0"
edition = "2021"
description = "BROZ Auth Service - Registration, login, email verification, password reset, Google OAuth, JWT"

[dependencies]
axum = { workspace = true }
diesel = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
futures-lite = "2"

broz-shared = { workspace = true }
