[package]
name = "broz-gateway"
version = "0.1.0"
edition = "2021"
description = "BROZ API Gateway - Reverse proxy, JWT validation, rate limiting"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { version = "1", features = ["full"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
redis = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

broz-shared = { workspace = true }
