[package]
name = "broz-matching"
version = "0.1.0"
edition = "2021"
description = "BROZ Matching Service - Socket.IO matchmaking, WebRTC signaling, LiveCam"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
redis = { workspace = true }
tower-http = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
socketioxide = { version = "0.14", features = ["state", "extensions"] }
tower = { workspace = true }
broz-shared = { workspace = true }
