[package]
name = "broz-messaging"
version = "0.1.0"
edition = "2021"
description = "BROZ Messaging Service - 1:1 and group conversations"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
diesel = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
redis = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
jsonwebtoken = { workspace = true }
futures-lite = "2"
dashmap = "6"
socketioxide = { version = "0.14", features = ["state", "extensions"] }
reqwest = { workspace = true }
broz-shared = { workspace = true }
