[package]
name = "broz-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types, errors, middleware, and clients for BROZ microservices"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
lapin = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
validator = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# S3/MinIO
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
