[package]
name = "broz-user"
version = "0.1.0"
edition = "2021"
description = "BROZ User Service - Profiles, follows, likes, photo uploads"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
diesel = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
futures-lite = "2"

broz-shared = { workspace = true }
